@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: smi.c,v 1.71 2000/02/10 11:35:37 strauss Exp $
+ * @(#) $Id: smi.c,v 1.72 2000/02/10 12:50:39 strauss Exp $
  */
 
 #include <sys/types.h>
@@ -544,9 +544,8 @@ SmiModule *smiGetNextModule(SmiModule *smiModulePtr)
 
     
     for (modulePtr = ((Module *)smiModulePtr)->nextPtr;
-	 modulePtr->export.name &&
-	     (strlen(modulePtr->export.name) == 0) &&
-	     modulePtr;
+	 modulePtr && modulePtr->export.name &&
+	     (strlen(modulePtr->export.name) == 0);
 	 modulePtr = modulePtr->nextPtr);
 
     return &modulePtr->export;
